# people-search-bench

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
benchmark/: data_loader.py  metrics.py  models.py  query_analyzer.py  runner.py
benchmark/evaluators/: __init__.py  base.py  criteria_evaluator.py
benchmark/loaders/: __init__.py  claude_code_loader.py  exa_loader.py  juicebox_loader.py  lessie_loader.py
data/queries/: b2b.jsonl  deterministic.jsonl  influencer.jsonl  recruiting.jsonl
data/scores/: README.md
data/scores/claude_code/: summary.json
data/scores/exa/: summary.json
data/scores/juicebox/: summary.json
data/scores/lessie/: summary.json
docs/: methodology.md  submission_guide.md
tools/: compute_scores.py
